--- a/PointToOffer/PointToOffer/PointToOffer.vcxproj
+++ b/PointToOffer/PointToOffer/PointToOffer.vcxproj
@@ -155,11 +155,19 @@
     <ClCompile Include="Topic3_2.cpp" />
     <ClCompile Include="Topic4.cpp" />
     <ClCompile Include="Topic5_1.cpp" />
+    <ClCompile Include="Topic6.cpp" />
+    <ClCompile Include="Topic7.cpp" />
+    <ClCompile Include="Topic8.cpp" />
+    <ClCompile Include="Topic9.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Topic3_2.h" />
     <ClInclude Include="Topic4.h" />
     <ClInclude Include="Topic5_1.h" />
+    <ClInclude Include="Topic6.h" />
+    <ClInclude Include="Topic7.h" />
+    <ClInclude Include="Topic8.h" />
+    <ClInclude Include="Topic9.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
